# Tenet-pay

./: README.md  composer.json  package-lock.json
app/Actions/Fortify/: CreateNewUser.php
app/Http/Controllers/: QRcodeGen.php
app/Http/Livewire/: GenerateComponent.php
app/Models/: User.php
backend/: Cargo.toml
backend/config/: default.toml
backend/keys/: rs256-4096-private.rsa  rs256-4096-public.pem
backend/src/: errors.rs  main.rs  settings.rs
backend/src/auth/: model.rs
backend/src/graphql/: context.rs  handler.rs  mod.rs  model.rs  mutation.rs  query.rs
backend/src/jwt/: handler.rs  manager.rs  model.rs
backend/src/router/: frontend.rs  handler.rs  mod.rs  redirects.rs
database/migrations/: 2014_10_12_000000_create_users_table.php
frontend/: Cargo.toml  package.json  rollup.config.js
frontend/src/: app.rs  lib.rs  utils.rs
frontend/src/graphql/: mod.rs  queries.rs
resources/views/: navigation-menu.blade.php
resources/views/auth/: register.blade.php
resources/views/livewire/: generate-component.blade.php
routes/: web.php
