[package]
name = "frontend"
version = "0.1.0"
description = "One-on-one chat frontend"
readme = "README.md"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3"
futures = "0.3.17"
futures-signals = "0.3.20"
once_cell = "1.7.2"
serde_json = "1.0.64"
serde_derive = "1.0.126"
lazy_static = "1.4.0"
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
urlencoding = "2.1.0"

[dependencies.serde]
version = "1.0.126"
features = ["rc", "derive"]

[dependencies.web-sys]
version = "0.3.51"
features = [
    "Window",
    "Storage",
    "console",
    "Navigator",
    "MediaDevices",
    "MediaStreamConstraints",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "HtmlCollection",
    "Node",
    'NodeList',
    "PopStateEvent",
    "HtmlInputElement",
    "Storage",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Url",
    "UrlSearchParams",
    "MediaStream",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "ProgressEvent",
    "WebSocket",
    "console",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcSessionDescription",
    "RtcOfferOptions",
    "MediaStreamTrack",
    "RtcRtpSender",
    "RtcTrackEvent",
    "RtcIceGatheringState",
    "RtcIceConnectionState",
    "RtcSignalingState",
    "RtcIceCandidateInit"
]
